--- a/app/src/main/res/layout/place_layout.xml
+++ b/app/src/main/res/layout/place_layout.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="370dp"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="5dp">
+    app:cardCornerRadius="8dp"
+    app:cardElevation="6dp"
+    app:cardUseCompatPadding="true"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="2">
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1.5"
-            android:orientation="vertical"
-            android:padding="10dp">
-
+        android:padding="10dp"
+        android:weightSum="2"
+        android:layout_weight="1.5">
 
             <TextView
                 android:id="@+id/txtPlaceName"
@@ -35,6 +30,5 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
-    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
