--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
     <color name="grayBackground">#BCBCBC</color>
     <color name="chatbackground">#AAAAAA</color>
 
+    <color name="grey_300">#CA1212</color>
+
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#fff</color>
 </resources>
