--- a/app/src/main/res/layout/nav_header_driver_home.xml
+++ b/app/src/main/res/layout/nav_header_driver_home.xml
@@ -10,14 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:layout_marginTop="90dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_avatar"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:src="@drawable/sports"
         app:civ_border_color="@android:color/white"
         app:civ_border_width="1dp" />
 
