Revert "release certificate google maps fix"
This reverts commit ae8eb9e2105504b5280ebfeb57885be56d04de97.

--- a/app/src/main/res/layout/activity_group_create.xml
+++ b/app/src/main/res/layout/activity_group_create.xml
@@ -18,7 +18,7 @@
 
     <!--EditText: Group Title-->
     <EditText
-        android:id="@+id/entry_fee"
+        android:id="@+id/groupTitleEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/groupIconIv"
@@ -30,10 +30,10 @@
 
     <!--EditText: Group Group Description-->
     <EditText
-        android:id="@+id/prize_money"
+        android:id="@+id/groupDescriptionEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/entry_fee"
+        android:layout_below="@id/groupTitleEt"
         android:layout_marginTop="10dp"
         android:background="@color/colorWhite"
         android:gravity="top"
