--- a/app/src/main/res/layout/activity_driver_home.xml
+++ b/app/src/main/res/layout/activity_driver_home.xml
@@ -6,35 +6,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".DashboardActivity"
     tools:openDrawer="start">
 
-    <LinearLayout
+    <include
+        android:id="@+id/app_bar_driver_home"
+        layout="@layout/app_bar_driver_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@android:color/white"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_driver_home"
-        app:menu="@menu/activity_main_drawer" />
+        app:itemIconTint="@color/drawer_item_color_state"
+        app:itemTextColor="@color/drawer_item_color_state"
+        app:menu="@menu/activity_main_drawer"
+
+        />
 </androidx.drawerlayout.widget.DrawerLayout>
